--- a/WaterPuzzle/Makefile
+++ b/WaterPuzzle/Makefile
@@ -1,10 +1,11 @@
 TOPFILE = WaterPuzzle
-SOURCES = WaterPuzzle.ml2mk.ml WaterPuzzleD.ml
+SOURCES = WaterPuzzle.ml2mk.ml
 
 REWRITER_EXES = rewriter.native rewriter_ppx.native
 PXFLAGS = -pp './rewriter_ppx.native -new-typenames -pp ./rewriter.native'
 include ../Makefile.common.mk
-NOCFLAGS = -w -8
+NOCFLAGS = -w -8 -rectypes
+BFLAGS += -package noCanren.Peano
 
 rewriter.native: rewriter_ppx.native
 rewriter_ppx.native:
