Camlp5 extensions in Water puzzle.

--- a/WaterPuzzle/Makefile
+++ b/WaterPuzzle/Makefile
@@ -4,7 +4,7 @@ SOURCES = WaterPuzzle.ml2mk.ml
 REWRITER_EXES = rewriter.native rewriter_ppx.native
 PXFLAGS = -pp './rewriter_ppx.native -new-typenames -pp ./rewriter.native'
 include ../Makefile.common.mk
-NOCFLAGS = -w -8 -rectypes
+NOCFLAGS = -pp ./rewriter.native -w -8 -rectypes
 BFLAGS += -package noCanren.Peano
 
 rewriter.native: rewriter_ppx.native
