ocanrun in WaterPuzzle

--- a/WaterPuzzle/Makefile
+++ b/WaterPuzzle/Makefile
@@ -5,7 +5,7 @@ REWRITER_EXES = rewriter.native rewriter_ppx.native
 PXFLAGS = -pp './rewriter_ppx.native -new-typenames -pp ./rewriter.native'
 include ../Makefile.common.mk
 NOCFLAGS = -pp ./rewriter.native -w -8 -rectypes
-BFLAGS += -package noCanren.Peano
+BFLAGS += -package noCanren.Peano -package noCanren.List
 
 rewriter.native: rewriter_ppx.native
 rewriter_ppx.native:
